# TouHouProject-Ru_koto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TouHouProject.vcxproj
cmake/: FindDPP.cmake
lib/brynet/examples/: PingPongServer.cpp
src/: Application.cpp  Qpp.hpp  Ru_koto.cpp  Ru_koto.h  dpp.hpp  main.cpp
src/Application/: Ru_koto.cpp  Ru_koto.h  Rult.hpp  default.h
src/Application/Fn/: QQandDiscord.cpp  config.cpp  interpreter.cpp  monitor_message.cpp  slashcommand.cpp  terminal.cpp  voice.cpp
src/TwoBot/: twobot.cc
src/discord/: App_awa_koto.h  Ru_koto.cpp  Ru_koto.h  Rult.hpp  Terminal.cpp  Terminal.h  awa-koto.cpp  awa-koto.h  bot.h  config.hpp  message.cpp  message.h  struct.hpp  voice.cpp  voice.h
src/discord/Fn/: config.cpp  monitor_message.cpp  slashcommand.cpp  terminal.cpp  test.cpp  voice.cpp
src/server/: apiset.cc  twobot.cc
src/server/oro-core/: Cargo.toml
src/server/oro-core/src/: api.rs  client.rs  config.rs  handler.rs  lib.rs  message.rs
src/server/twobot/: Two_link_QD.hpp  link_QD.cpp
